--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="cover.css">
-    <title>COMING 2021 | InTown</title>
+    <title>Sheldon Millz</title>
   </head>
   <body>
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -18,18 +18,13 @@
   <main role="main" class="inner cover" style="text-align: center;">
     <h1 class="cover-heading"><img src="intown.png" class="img-fluid"></img></h1>
     <p class="lead">
-    
-    Under Construction...</p>
-    <p class="lead">
-      <a href="https://instagram.com/intowntech" class="btn btn-lg btn-secondary">LAUNCHING 2021</a>
+    COMING 2024
     </p>
   </main>
 
   <footer class="mastfoot mt-auto" style="text-align: center;">
     <div class="inner">
       <p>Powered by <a href="https://instagram.com/intowntech">InTown Tech</a></p>
-    </div>
-  </footer>
 </div>
  
 
