--- a/index.html
+++ b/index.html
@@ -16,16 +16,11 @@
   </header>
 
   <main role="main" class="inner cover" style="text-align: center;">
-    <h1 class="cover-heading"><img src="intown.png" class="img-fluid"></img></h1>
+    <h1 class="cover-heading"><img src="sheldonmillz.png" class="img-fluid"></img></h1>
     <p class="lead">
     COMING 2024
     </p>
   </main>
-
-  <footer class="mastfoot mt-auto" style="text-align: center;">
-    <div class="inner">
-      <p>Powered by <a href="https://instagram.com/intowntech">InTown Tech</a></p>
-</div>
  
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
