--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     COMING 2024
     </p>
   </main>
+
+  <footer class="mastfoot mt-auto" style="text-align: center;">
+    <div class="inner">
+      <p><a href="https://instagram.com/sheldonmillz">COMING SOON</a></p>
+    </div>
+  </footer>
  
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
