--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <footer class="mastfoot mt-auto" style="text-align: center;">
     <div class="inner">
-      <p><a href="https://instagram.com/sheldonmillz">COMING SOON</a></p>
+      <p><a href="https://instagram.com/sheldonmillz"> Our webstore is currently closed and will open for our 2024 Summer/Spring Collection.</a></p>
     </div>
   </footer>
  
