--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
     <link rel="stylesheet" href="sheldonmillzcover.css">
 
     <!-- InTown VIP Username -->
-    <title>Sheldon Millz | InTown VIP </title>
+    <title>Sheldon Millz </title>
   </head>
 
   <body>
 
     <br>
     <br>
+    <br>
+    <br>
 
       <main>
+            <br>
+    <br>
+    <br>
+    <br>
       <!-- Content -->
       <div class="container" style="margin: auto; width: auto; text-align: center;">
 
@@ -70,11 +76,7 @@
 
 
       <footer class="mastfoot mt-auto" style="text-align: center;">
-        <div class="inner">
-          <p>Powered by <!-- Brand --><a class="navbar-brand" href="https://www.intown.vip">
-              <img src="assets/img/itv.png" class="img-fluid">
-            </a></p>
-        </div>
+        
       </footer>
     </div>
 
