--- a/index.html
+++ b/index.html
@@ -55,7 +55,20 @@
     
       <main>
         <p style="font-family: Tahoma, sans-serif;font-weight: 1000;">
-          
+          Sheldon Millz is an artist. Born 
+          outside of Queens, NY in the 
+          village of Valley Stream. He 
+          completed his Bachelor of 
+          Business Administration and 
+          Master of Business 
+          Administration in Atlanta, GA;
+          then continued home to 
+          pursue his innate musical 
+          talent. He has released a few 
+          singles in 2023 with more to 
+          come. Enjoy the vibes of this 
+          fresh talent as he matures into 
+          a star. 
 
           <br>
           <br>
