--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
     <br>
       <main>
         <p style="font-family: Tahoma, sans-serif;font-weight: 1000;">
-          Sheldon Millz is an artist. Born 
-          outside of Queens, NY in the 
-          village of Valley Stream. He 
-          completed his Bachelor of 
-          Business Administration and 
-          Master of Business 
-          Administration in Atlanta, GA;
-          then continued home to 
-          pursue his innate musical 
-          talent. He has released a few 
-          singles in 2023 with more to 
-          come. Enjoy the vibes of this 
-          fresh talent as he matures into 
+          Sheldon Millz is an artist. Born<br>
+          outside of Queens, NY in the <br>
+          village of Valley Stream. He <br>
+          completed his Bachelor of <br>
+          Business Administration and <br>
+          Master of Business <br>
+          Administration in Atlanta, GA;<br>
+          then continued home to <br>
+          pursue his innate musical <br>
+          talent. He has released a few <br>
+          singles in 2023 with more to <br>
+          come. Enjoy the vibes of this <br>
+          fresh talent as he matures into <br>
           a star. 
 
           <br>
