--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br>
     <br>
       <main>
-        <p style="font-family: Tahoma, sans-serif;font-weight: 2000;">
+        <p style="font-family: Tahoma, sans-serif;text-align: center;font-weight: 2000;">
           Sheldon Millz is an artist. Born<br>
           outside of Queens, NY in the <br>
           village of Valley Stream. He <br>
