--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br>
     <br>
       <main>
-        <p style="font-family: Tahoma, sans-serif;text-align: center;font-weight: 2000;">
+        <h1 style="font-family: Tahoma, sans-serif;text-align: center;font-weight: 2000;">
           Sheldon Millz is an artist. Born<br>
           outside of Queens, NY in the <br>
           village of Valley Stream. He <br>
@@ -57,7 +57,7 @@
 
           <br>
           <br>
-        </p>
+        </h1>
     <br>
     <br>   
     <br>
