--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br>
     <br>
       <main>
-        <h1 style="font-family: Tahoma, sans-serif;text-align: center;font-weight: bold;">
+        <h1 style="font-family: Tahoma, sans-serif;text-align: center;font-size: 80%;font-weight: bold;">
           Sheldon Millz is an artist. Born<br>
           outside of Queens, NY in the <br>
           village of Valley Stream. He <br>
