--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   
             <li class="list-inline-item">
               <a href="https://music.apple.com/us/artist/sheldon-millz/1687179790">
-                </i><i class="fab fa-apple" style="color: white;"></i>
+                </i><i class="fab fa-apple" style="size:80%;color: white;"></i>
               </a>
             </li>
                 
