--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
           talent. He has released a few <br>
           singles in 2023 with more to <br>
           come. Enjoy the vibes of this <br>
-          fresh talent as he matures into <br>
-          a star. 
+          fresh talent. 
 
           <br>
           <br>
