--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br>
     <br>
       <main>
-        <h1 style="font-family: Tahoma, sans-serif;text-align: center;font-size: 80%;font-weight: bold;">
+        <h1 style="font-family: Tahoma, sans-serif;text-align: center;font-size: 99%;font-weight: bold;">
           Sheldon Millz is an artist. Born<br>
           outside of Queens, NY in the <br>
           village of Valley Stream. He <br>
@@ -79,7 +79,7 @@
                   
             <li class="list-inline-item">
               <a href="https://music.apple.com/us/artist/sheldon-millz/1687179790">
-                </i><i class="fab fa-apple" style="size:80%;color: white;"></i>
+                </i><i class="fab fa-apple" style="size:1000px;color: white;"></i>
               </a>
             </li>
                 
