--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
     <br>
         <h1 style="font-family: Tahoma, sans-serif;text-align: center;font-size: 99%;font-weight: bold;">
           Sheldon Millz is an artist. Born<br>
-          outside of Queens, NY in the <br>
-          village of Valley Stream. He <br>
+          outside of Queens, NY. He <br>
           completed his Bachelor of <br>
           Business Administration and <br>
           Master of Business <br>
-          Administration in Atlanta, GA;<br>
+          Administration<br>
           then continued home to <br>
           pursue his innate musical <br>
           talent. He has released a few <br>
