--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           Business Administration and <br>
           Master of Business <br>
           Administration<br>
-          then continued home to <br>
+          then continued on to <br>
           pursue his innate musical <br>
           talent. He has released a few <br>
           singles in 2023 with more to <br>
