--- a/index_shop.html
+++ b/index_shop.html
@@ -21,7 +21,18 @@
 
   <footer class="mastfoot mt-auto" style="text-align: center;">
     <div class="inner">
-      <p><a href="https://instagram.com/sheldonmillz"> Our webstore is currently closed and will open for our 2024 Summer/Spring Collection.</a></p>
+      <p><a href="https://instagram.com/sheldonmillz"> Our webstore is currently closed and will open for our 2024 Summer/Spring Collection. Please use the link below to listen to MILL$ music.</a></p>
+
+         <!-- Text -->
+          <ul class="card-text list-inline list-unstyled">
+                  
+            <li class="list-inline-item">
+              <a href="https://music.apple.com/us/artist/sheldon-millz/1687179790">
+                </i><i class="fab fa-apple" style="color: white;"></i>
+              </a>
+            </li>
+                
+          </ul>
     </div>
   </footer>
  
