--- a/index_shop.html
+++ b/index_shop.html
@@ -32,6 +32,11 @@
 
   <main role="main" class="inner cover" style="text-align: center;">
     <h1 class="cover-heading"><img src="sheldonmillz.png" class="img-fluid"></img></h1>
+    <p><a href="https://instagram.com/sheldonmillz"> Our webstore is currently closed and will open for our 2024 Summer/Spring Collection. Listen to MILL$ music below.</a></p>
+
+
+        <h1 class="cover-heading"><img src="sheldonmillz.png" class="img-fluid"></img></h1>
+    <p><a href="https://instagram.com/sheldonmillz"> Our webstore is currently closed and will open for our 2024 Summer/Spring Collection. Listen to MILL$ music below.</a></p>
   </main>
 
   <footer class="mastfoot mt-auto" style="text-align: center;">
