--- a/index_shop.html
+++ b/index_shop.html
@@ -41,7 +41,7 @@
 
   <footer class="mastfoot mt-auto" style="text-align: center;">
     <div class="inner">
-      <p><a href="https://instagram.com/sheldonmillz"> Our webstore is currently closed and will open for our 2024 Summer/Spring Collection. Listen to MILL$ music below.</a></p>
+      <p><a href="https://instagram.com/sheldonmillz"> Sheldon Millz is an artist. Born outside of Queens, NY in the village of Valley Stream. He completed his Bachelor of Business Administration and Master of Business Administration in Atlanta, GA; then continued home to pursue his innate musical talent. He has released a few singles in 2023 with more to come. Enjoy the vibes of this fresh talent as he matures into a star.  </a></p>
 
          <!-- Text -->
           <ul class="card-text list-inline list-unstyled">
