--- a/index_shop.html
+++ b/index_shop.html
@@ -28,6 +28,8 @@
   <body>
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto" style="text-color: white;">
+    <h1 class="cover-heading"><img src="millz.png" class="img-fluid"></img></h1>
+    
   </header>
 
   <main role="main" class="inner cover" style="text-align: center;">
