--- a/index_shop.html
+++ b/index_shop.html
@@ -28,7 +28,7 @@
   <body>
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto" style="text-color: white;">
-    <h1 class="cover-heading"><img src="millz.png" class="img-fluid"></img></h1>
+    <h1 class="cover-heading"><img src="Millz.png" class="img-fluid"></img></h1>
     
   </header>
 
