--- a/index_shop.html
+++ b/index_shop.html
@@ -51,7 +51,7 @@
 
   <footer class="mastfoot mt-auto" style="text-align: center;">
     <div class="inner">
-    <h1 class="cover-heading"><img src="sheldon.png" class="img-fluid"></img></h1>
+    <h1 class="cover-heading"><img src="sheldonmillz.png" class="img-fluid"></img></h1>
     <p><a href="https://instagram.com/sheldonmillz"> Our webstore is currently closed and will open for our 2024 Summer/Spring Fashion Collection.</a></p>
   
     </div>
