--- a/index_shop.html
+++ b/index_shop.html
@@ -30,7 +30,7 @@
     
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto" style="text-color: white; text-align: center;">
-    <h1 class="cover-heading"><img src="Millz.png" class="img-fluid"></img></h1>
+    <h1 class="cover-heading"><img src="millz.PNG" class="img-fluid"></img></h1>
 
     <ul class="card-text list-inline list-unstyled">
                   
