--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li class="list-inline-item">
 
               <!-- Button -->
-              <a href="sms:+15164002408?&body=Hi%2520this%2520is%2520" class="btn btn-outline-secondary">
+              <a href="sms:+15164002408?&body=Hi this is " class="btn btn-outline-secondary">
                   </i><i class="fas fa-phone" style="color: white;"></i>
               </a>
               
