--- a/index.html
+++ b/index.html
@@ -69,17 +69,7 @@
 
               <!-- Button -->
               <a href="https://music.apple.com/us/artist/sheldon-millz/1687179790" class="btn btn-outline-secondary">
-                  </i><i class="fab fa-apple" style="color: white;"></i>
-              </a>
-              
-            </li>
-
-
-            <li class="list-inline-item">
-
-              <!-- Button -->
-              <a href="sms:+15164002408?&body=Hi this is " class="btn btn-outline-secondary">
-                  </i><i class="fas fa-phone" style="color: white;"></i>
+                  </i><i class="fa-solid fa-music" style="color: white;"></i>
               </a>
               
             </li>
