--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li class="list-inline-item">
 
               <!-- Button -->
-              <a href="https://www.instagram.com/p/BxIF2AIhU7H/?igshid=YjVjNjZkNmFjNg==" class="btn btn-outline-secondary">
+              <a href="https://www.instagram.com/reel/Cq-0ZD_g8-r/?igshid=NTYzOWQzNmJjMA==" class="btn btn-outline-secondary">
                   </i><i class="fab fa-instagram" style="color: white;"></i>
               </a>
               
