--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li class="list-inline-item">
 
               <!-- Button -->
-                <p><button onclick="document.getElementById('profile').style.display='block'" class="btn btn-outline-secondary"></i><i class="fa-light fa-circle-info" style="color: white;"></i></button></p>
+                <button onclick="document.getElementById('profile').style.display='block'" class="btn btn-outline-secondary"></i><i class="fa fa-info" style="color: white;"></i></button>
               
             </li>
       
