--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,22 @@
 
               <!-- Button -->
                 <button onclick="document.getElementById('profile').style.display='block'" class="btn btn-outline-secondary"></i><i class="fa fa-info" style="color: white;"></i></button>
-              
+
+
+            <!-- Menu Modal -->
+    <div id="profile" class="w3-modal">
+        <div class="w3-modal-content w3-animate-zoom">
+            <div class="w3-container w3-gray w3-text-white w3-display-container">
+                <span onclick="document.getElementById('profile').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
+                <h1>Business Profile</h1>
+            </div>
+            <div class="w3-container">
+                <p>
+                    MMM exists to oversee the InTown brand. Our operations include mergers and acquisitions, executive management, investments, and staffing.
+                </p>
+            </div>
+        </div>
+    </div>
             </li>
                 
           </ul>
