--- a/index2.html
+++ b/index2.html
@@ -52,12 +52,7 @@
         <div class="w3-modal-content w3-animate-zoom">
             <div class="w3-container w3-gray w3-text-white w3-display-container">
                 <span onclick="document.getElementById('profile').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-                <h1>Business Profile</h1>
-            </div>
-            <div class="w3-container">
-                <p>
-                    MMM exists to oversee the InTown brand. Our operations include mergers and acquisitions, executive management, investments, and staffing.
-                </p>
+                <p>Sheldon Millz is an artist from Queens, NY. He completed high school and two college degrees in Atlanta, GA; then continued home to pursue his innate musical talent. He has released a few singles in 2023 with more to come. Enjoy the vibes of this fresh talent as he matures into a star…</p>
             </div>
         </div>
     </div>
