--- a/index2.html
+++ b/index2.html
@@ -51,9 +51,8 @@
     <div id="profile" class="w3-modal">
         <div class="w3-modal-content w3-animate-zoom">
             <div>
-                <span onclick="document.getElementById('profile').style.display='none'" class="w3-button w3-display-bottom w3-large">&times;</span>
+                <span onclick="document.getElementById('profile').style.display='none'" class="w3-button w3-display-bottom w3-large">                           <p>Sheldon Millz is an artist from Queens, NY. He completed high school and two college degrees in Atlanta, GA; then continued home to pursue his innate musical talent. He has released a few singles in 2023 with more to come. Enjoy the vibes of this fresh talent as he matures into a star…</p>  </span>
             </div>
-                          <p>Sheldon Millz is an artist from Queens, NY. He completed high school and two college degrees in Atlanta, GA; then continued home to pursue his innate musical talent. He has released a few singles in 2023 with more to come. Enjoy the vibes of this fresh talent as he matures into a star…</p>
         </div>
     </div>
             </li>
