--- a/index2.html
+++ b/index2.html
@@ -52,11 +52,11 @@
         <div class="w3-modal-content w3-animate-zoom">
             <div>
                 <span onclick="document.getElementById('profile').style.display='none'" class="w3-button w3-display-bottom w3-large">
-                  Sheldon Millz is an artist from Queens, NY. 
-                  He completed high school and two college degrees in Atlanta, GA; 
-                  then continued home to pursue his innate musical talent. 
-                  He released a few singles in 2023 with more to come. 
-                  Enjoy the vibes of this fresh talent as he matures into a star… 
+                  Sheldon Millz is an artist from Queens, NY. <br>
+                  He completed high school and two college degrees in Atlanta, GA; <br>
+                  then continued home to pursue his innate musical talent. <br>
+                  He released a few singles in 2023 with more to come. <br>
+                  Enjoy the vibes of this fresh talent as he matures into a star… <br>
                 </span>
             </div>
         </div>
