--- a/index2.html
+++ b/index2.html
@@ -51,7 +51,7 @@
     <div id="profile" class="w3-modal">
         <div class="w3-modal-content w3-animate-zoom">
             <div>
-                <span onclick="document.getElementById('profile').style.display='none'" class="w3-button w3-display-bottom w3-large">
+                <span onclick="document.getElementById('profile').style.display='none'" class="container">
                   Sheldon Millz is an artist from Queens, NY. <br>
                   He completed high school and two college degrees in Atlanta, GA; <br>
                   then continued home to pursue his innate musical talent. <br>
