--- a/index.html
+++ b/index.html
@@ -84,21 +84,19 @@
             <!-- Menu Modal -->
     <div id="profile" class="w3-modal">
         <div class="w3-modal-content w3-animate-zoom">
-            <div class="btn btn-outline-secondary" style="font-family: 'Courier New', monospace;">
+            <div class="btn btn-outline-secondary" style="font-family: 'Copperplate', monospace;">
                 <span onclick="document.getElementById('profile').style.display='none'" class="container">
                   Sheldon Millz is an artist from Queens, NY.
                   He completed high school and two college degrees in Atlanta, GA;
                   then continued home to pursue his innate musical talent.
                   He released a few singles in 2023 with more to come.
                   Enjoy the vibes of this fresh talent as he matures into a star…
-                </span>
-              <br>
-
-              <p style="text-align: center;">
+                  <p style="text-align: center;">
                  <!-- Button --><a href="https://music.apple.com/us/album/opportunity/1712760146?i=1712760147" class="btn btn-outline-dark" style=" color: black; align: center; text-color: black;" target="_blank">
                 Listen Here
               </a>
                 </p>
+                </span>
               
             </div>
         </div>
