--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <!-- Menu Modal -->
     <div id="profile" class="w3-modal">
         <div class="w3-modal-content w3-animate-zoom">
-            <div class="btn btn-outline-secondary" style="font-family: 'Copperplate', monospace; background-color: #888888;">
+            <div class="btn btn-outline-secondary" style="font-family: 'Copperplate', monospace; background-color: #888888; text-color: black;">
                 <span onclick="document.getElementById('profile').style.display='none'" class="container">
                   Sheldon Millz is an artist from Queens, NY.
                   He completed high school and two college degrees in Atlanta, GA;
