--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
         <br>
         <iframe src="https://embed.tidal.com/playlists/4d948451-671b-47fe-a632-2f75303a8778" allowfullscreen="allowfullscreen" frameborder="0" style="width:100%;height:96px"></iframe>
         
+        <iframe src="https://embed.tidal.com/tracks/322864800" allowfullscreen="allowfullscreen" frameborder="0" style="width:100%;height:96px"></iframe>
+
+        <iframe src="https://embed.tidal.com/tracks/304230744" allowfullscreen="allowfullscreen" frameborder="0" style="width:100%;height:96px"></iframe>
+
+        <iframe src="https://embed.tidal.com/tracks/300781397" allowfullscreen="allowfullscreen" frameborder="0" style="width:100%;height:96px"></iframe>
+
+        <iframe src="https://embed.tidal.com/tracks/294200013" allowfullscreen="allowfullscreen" frameborder="0" style="width:100%;height:96px"></iframe>
+
     </main>
 
 
