--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <li class="list-inline-item">
 
               <!-- Button -->
-              <a href="https://instagram.com/sheldonmillz?igshid=MzMyNGUyNmU2YQ==" class="btn btn-outline-secondary">
+              <a href="https://instagram.com/sheldonmillz?igshid=MzMyNGUyNmU2YQ==" class="btn btn-outline-secondary" target="_blank">
                   </i><i class="fab fa-instagram" style="color: white;"></i>
               </a>
               
