--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <span onclick="document.getElementById('profile').style.display='none'" class="container">
                   Sheldon Millz is an artist from Queens, NY.
                   He completed two college degrees in Atlanta, GA;
-                  then continued home to pursue his innate musical talent.
+                  then returned home to pursue his innate musical talent.
                   He released a few singles in 2023 with more to come.
                   Enjoy the vibes of this fresh talent as he matures into a star…
                 </span>
