--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="w3-modal-content w3-animate-zoom">
             <div class="btn btn-outline-secondary" style="font-family: 'Copperplate', monospace; background-color: #888888; text-color: black; color: black;">
                 <span onclick="document.getElementById('profile').style.display='none'" class="container">
-                  Sheldon Millz is an artist from Queens, NY.
-                  He completed two college degrees in Atlanta, GA;
+                  Sheldon Millz is an artist from New York, NY.
+                  He completed two college degrees in Georgia;
                   then returned home to pursue his innate musical talent.
                   He released a few singles in 2023 with more to come.
                   Enjoy the vibes of this fresh talent as he matures into a star…
